@@ -1,6 +1,7 @@
 - add infrastructure for rpmdrake (#920)
 - add infrastructure so that GUIes can offer not to ask anymore about missing
   or bad packages
+- fix broken 'urpmi --no-md5sum' (pok, mga#62557)
 - use rsync to download from rsync-mirrors (Alexander Barakin, mga#2518)
 
 Version 6.40 - 07 May 2010
